--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
   </description>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javac.version>9+181-r4173-1</javac.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
@@ -604,9 +606,19 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
               </compilerArguments>
               <annotationProcessorPaths>
                 <path>
+                  <groupId>com.google.errorprone</groupId>
+                  <artifactId>error_prone_core</artifactId>
+                  <version>2.18.0</version>
+                </path>
+                <path>
                   <groupId>edu.ucr.cs.riple.taint</groupId>
                   <artifactId>ucrtainting-checker</artifactId>
                   <version>0.1</version>
+                </path>
+                <path>
+                  <groupId>edu.ucr.cs.riple.annotator</groupId>
+                  <artifactId>annotator-scanner</artifactId>
+                  <version>1.3.8-SNAPSHOT</version>
                 </path>
               </annotationProcessorPaths>
               <annotationProcessors>
@@ -619,7 +631,8 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
                 <arg>-AenableCustomCheck</arg>
                 <arg>-AenableSerialization</arg>
                 <arg>-AserializationConfigPath=/tmp/ucr-tainting/apache-compress/taint.xml</arg>
-                <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
+                <arg>-XDcompilePolicy=simple</arg>
+                <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/tmp/ucr-tainting/apache-compress/scanner.xml</arg>
               </compilerArgs>
             </configuration>
           </plugin>
