--- a/pom.xml
+++ b/pom.xml
@@ -615,24 +615,24 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
                   <artifactId>ucrtainting-checker</artifactId>
                   <version>0.1</version>
                 </path>
-                <path>
-                  <groupId>edu.ucr.cs.riple.annotator</groupId>
-                  <artifactId>annotator-scanner</artifactId>
-                  <version>1.3.8-SNAPSHOT</version>
-                </path>
+<!--                <path>-->
+<!--                  <groupId>edu.ucr.cs.riple.annotator</groupId>-->
+<!--                  <artifactId>annotator-scanner</artifactId>-->
+<!--                  <version>1.3.8-SNAPSHOT</version>-->
+<!--                </path>-->
               </annotationProcessorPaths>
               <annotationProcessors>
                 <!-- Add all the checkers you want to enable here -->
                 <annotationProcessor>edu.ucr.cs.riple.taint.ucrtainting.UCRTaintingChecker</annotationProcessor>
               </annotationProcessors>
               <compilerArgs>
-                <arg>-Awarns</arg>
+<!--                <arg>-Awarns</arg>-->
                 <arg>-AannotatedPackages=org.apache</arg>
                 <arg>-AenableCustomCheck</arg>
                 <arg>-AenableSerialization</arg>
-                <arg>-AserializationConfigPath=/tmp/ucr-tainting/apache-compress/taint.xml</arg>
+                <arg>-AserializationConfigPath=/tmp/ucr-tainting/compress/taint.xml</arg>
                 <arg>-XDcompilePolicy=simple</arg>
-                <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/tmp/ucr-tainting/apache-compress/scanner.xml</arg>
+<!--                <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/tmp/ucr-tainting/compress/scanner.xml</arg>-->
               </compilerArgs>
             </configuration>
           </plugin>
