--- a/pom.xml
+++ b/pom.xml
@@ -345,7 +345,6 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
   </scm>
 
   <build>
-    <defaultGoal>clean verify apache-rat:check japicmp:cmp javadoc:javadoc</defaultGoal>
     <pluginManagement>
       <plugins>
         <!-- Override Javadoc config in parent pom to add JCIP tags -->
@@ -381,21 +380,6 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
               </tag>
             </tags>
           </configuration> 
-        </plugin>
-        <plugin>
-          <groupId>org.apache.rat</groupId>
-          <artifactId>apache-rat-plugin</artifactId>
-          <version>${commons.rat.version}</version>
-          <configuration>
-            <excludes>
-              <!-- files used during tests -->
-              <exclude>src/test/resources/**</exclude>
-              <exclude>.pmd</exclude>
-              <exclude>.projectile</exclude>
-              <exclude>.mvn/**</exclude>
-              <exclude>.gitattributes</exclude>
-            </excludes>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.eluder.coveralls</groupId>
@@ -628,11 +612,11 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
               <compilerArgs>
                 <arg>-Awarns</arg>
                 <arg>-AannotatedPackages=org.apache</arg>
-                <arg>-AenableCustomCheck</arg>
+                <arg>-AenableLibraryCheck</arg>
                 <arg>-AenableSerialization</arg>
-                <arg>-AserializationConfigPath=/tmp/ucr-tainting/apache-compress/taint.xml</arg>
+                <arg>-AserializationConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/checker.xml</arg>
                 <arg>-XDcompilePolicy=simple</arg>
-                <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/tmp/ucr-tainting/apache-compress/scanner.xml</arg>
+                <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/scanner.xml</arg>
               </compilerArgs>
             </configuration>
           </plugin>
