--- a/pom.xml
+++ b/pom.xml
@@ -596,7 +596,7 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
                 </path>
                 <path>
                   <groupId>edu.ucr.cs.riple.taint</groupId>
-                  <artifactId>ucrtainting-checker</artifactId>
+                  <artifactId>ucrtainting-checker-off</artifactId>
                   <version>0.1</version>
                 </path>
                 <path>
