--- a/pom.xml
+++ b/pom.xml
@@ -612,7 +612,9 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
               <compilerArgs>
                 <arg>-Awarns</arg>
                 <arg>-AannotatedPackages=org.apache.commons.compress</arg>
-                <arg>-AenableLibraryCheck</arg>
+                <arg>-AenableLibraryCheck=${env.ANNOTATOR_LIBRARY}</arg>
+                <arg>-AenablePolyTaintInference=${env.ANNOTATOR_POLY}</arg>
+                <arg>-AenableTypeArgumentInference=${env.ANNOTATOR_TYPE_ARG}</arg>
                 <arg>-AenableSerialization</arg>
                 <arg>-AserializationConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/checker.xml</arg>
                 <arg>-XDcompilePolicy=simple</arg>
