--- a/pom.xml
+++ b/pom.xml
@@ -592,31 +592,30 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
                 <path>
                   <groupId>com.google.errorprone</groupId>
                   <artifactId>error_prone_core</artifactId>
-                  <version>2.18.0</version>
+                  <version>2.23.0</version>
                 </path>
-                <path>
+                <!-- <path>
                   <groupId>edu.ucr.cs.riple.taint</groupId>
                   <artifactId>ucrtainting-checker</artifactId>
                   <version>0.1</version>
-                </path>
+                </path> -->
                 <path>
                   <groupId>edu.ucr.cs.riple.annotator</groupId>
                   <artifactId>annotator-scanner</artifactId>
-                  <version>1.3.8-SNAPSHOT</version>
+                  <version>1.3.9-TAINT-SNAPSHOT</version>
                 </path>
               </annotationProcessorPaths>
-              <annotationProcessors>
-                <!-- Add all the checkers you want to enable here -->
+              <!-- <annotationProcessors>
                 <annotationProcessor>edu.ucr.cs.riple.taint.ucrtainting.UCRTaintingChecker</annotationProcessor>
-              </annotationProcessors>
+              </annotationProcessors> -->
               <compilerArgs>
-                <arg>-Awarns</arg>
-                <arg>-AannotatedPackages=org.apache.commons.compress</arg>
-                <arg>-AenableLibraryCheck=${env.ANNOTATOR_LIBRARY}</arg>
+                <!-- <arg>-Awarns</arg> -->
+                <!-- <arg>-AannotatedPackages=org.apache.commons.compress</arg> -->
+                <!-- <arg>-AenableLibraryCheck=${env.ANNOTATOR_LIBRARY}</arg>
                 <arg>-AenablePolyTaintInference=${env.ANNOTATOR_POLY}</arg>
-                <arg>-AenableTypeArgumentInference=${env.ANNOTATOR_TYPE_ARG}</arg>
-                <arg>-AenableSerialization</arg>
-                <arg>-AserializationConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/checker.xml</arg>
+                <arg>-AenableTypeArgumentInference=${env.ANNOTATOR_TYPE_ARG}</arg> -->
+                <!-- <arg>-AenableSerialization</arg> -->
+                <!-- <arg>-AserializationConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/checker.xml</arg> -->
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/scanner.xml</arg>
               </compilerArgs>
