--- a/pom.xml
+++ b/pom.xml
@@ -589,35 +589,35 @@ Brotli, Zstandard and ar, cpio, jar, tar, zip, dump, 7z, arj.
                 <Xmaxwarns>10000</Xmaxwarns>
               </compilerArguments>
               <annotationProcessorPaths>
-                <path>
+                <!-- <path>
                   <groupId>com.google.errorprone</groupId>
                   <artifactId>error_prone_core</artifactId>
                   <version>2.23.0</version>
-                </path>
-                <!-- <path>
+                </path> -->
+                <path>
                   <groupId>edu.ucr.cs.riple.taint</groupId>
                   <artifactId>ucrtainting-checker</artifactId>
                   <version>0.1</version>
-                </path> -->
-                <path>
+                </path>
+                <!-- <path>
                   <groupId>edu.ucr.cs.riple.annotator</groupId>
                   <artifactId>annotator-scanner</artifactId>
                   <version>1.3.9-TAINT-SNAPSHOT</version>
-                </path>
+                </path> -->
               </annotationProcessorPaths>
-              <!-- <annotationProcessors>
+              <annotationProcessors>
                 <annotationProcessor>edu.ucr.cs.riple.taint.ucrtainting.UCRTaintingChecker</annotationProcessor>
-              </annotationProcessors> -->
+              </annotationProcessors>
               <compilerArgs>
                 <!-- <arg>-Awarns</arg> -->
-                <!-- <arg>-AannotatedPackages=org.apache.commons.compress</arg> -->
-                <!-- <arg>-AenableLibraryCheck=${env.ANNOTATOR_LIBRARY}</arg>
+                <arg>-AannotatedPackages=org.apache.commons.compress</arg>
+                <arg>-AenableLibraryCheck=${env.ANNOTATOR_LIBRARY}</arg>
                 <arg>-AenablePolyTaintInference=${env.ANNOTATOR_POLY}</arg>
-                <arg>-AenableTypeArgumentInference=${env.ANNOTATOR_TYPE_ARG}</arg> -->
-                <!-- <arg>-AenableSerialization</arg> -->
-                <!-- <arg>-AserializationConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/checker.xml</arg> -->
-                <arg>-XDcompilePolicy=simple</arg>
-                <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/scanner.xml</arg>
+                <arg>-AenableTypeArgumentInference=${env.ANNOTATOR_TYPE_ARG}</arg>
+                <arg>-AenableSerialization</arg>
+                <arg>-AserializationConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/checker.xml</arg>
+                <!-- <arg>-XDcompilePolicy=simple</arg> -->
+                <!-- <arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:AnnotatorScanner:ERROR -XepOpt:AnnotatorScanner:ConfigPath=/home/nima/Developer/taint-benchmarks/commons-compress/annotator-out/scanner.xml</arg> -->
               </compilerArgs>
             </configuration>
           </plugin>
